<resources>
    <string name="app_name">StarWarsChallenge</string>
    <string name="search_query_hint">Enter character name</string>
    <string name="character_birth_year_text">Birth year:</string>
    <string name="character_height_text">Character height:</string>
    <string name="character_species_text">Species name:</string>
    <string name="character_languages_text">Languages:</string>
    <string name="loading">Loading…</string>
    <string name="nothing_found">Nothing found!</string>
    <string name="loading_films">Loading films</string>
    <string name="no_films_were_found">No films were found!</string>
    <string name="planet_information_text">Planet Information</string>
    <string name="planet_name_text">Planet name:</string>
    <string name="planet_population_text">Planet population:</string>
    <string name="not_applicable">n/a</string>
    <string name="film_information_text">Film Information</string>
    <string name="details_text">Details:</string>
    <string name="character_search_title">Character Search</string>
    <string name="something_went_wrong">Ooops, something went wrong. Please report this problem.</string>

    <string name="film_category_url">https://swapi.co/api/films/</string>
    <string name="species_category_url">https://swapi.co/api/species/</string>
    <string name="planet_category_url">https://swapi.co/api/planets/</string>
</resources>
