<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/standard_margin"
        tools:context=".character.detail.view.CharacterDetailFragment">
    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".character.detail.view.CharacterDetailFragment">

        <TextView
                android:id="@+id/tvDetailCharacterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/biggest_text_size"/>

        <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/standard_margin"
                tools:layout_editor_absoluteX="0dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_birth_year_text"
                    android:textStyle="bold"
                    android:textSize="@dimen/biggest_text_size"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/standard_margin"/>

            <TextView
                    android:id="@+id/tvDetailCharacterBirthDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/bigger_text_size"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/standard_margin"
                tools:layout_editor_absoluteX="0dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_height_text"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/bigger_text_size"
                    android:layout_marginEnd="@dimen/standard_margin"/>

            <TextView
                    android:id="@+id/tvDetailHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/bigger_text_size"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/standard_margin"
                tools:layout_editor_absoluteX="0dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_species_text"
                    android:textStyle="bold"
                    android:textSize="@dimen/bigger_text_size"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/standard_margin"/>

            <TextView
                    android:id="@+id/tvDetailSpeciesName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="@dimen/bigger_text_size"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/standard_margin"
                tools:layout_editor_absoluteX="0dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_languages_text"
                    android:textStyle="bold"
                    android:textSize="@dimen/bigger_text_size"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/standard_margin"/>

            <TextView
                    android:id="@+id/tvDetailLanguages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="@dimen/bigger_text_size"/>
        </android.support.v7.widget.LinearLayoutCompat>


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textSize="@dimen/planet_information_text_size"
                android:layout_marginTop="@dimen/standard_margin"
                android:textColor="@color/black"
                android:text="@string/planet_information_text"/>

        <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/standard_margin"
                tools:layout_editor_absoluteX="0dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_name_text"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/standard_text_size"
                    android:layout_marginEnd="@dimen/small_margin"/>

            <TextView
                    android:id="@+id/tvDetailPlanet1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="@dimen/standard_text_size"
                    android:layout_marginEnd="@dimen/small_margin"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_population_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/standard_text_size"
                    android:layout_marginEnd="@dimen/small_margin"/>

            <TextView
                    android:id="@+id/tvDetailPopulation1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="@dimen/standard_text_size"/>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/planetBlock2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/standard_margin"
                tools:layout_editor_absoluteX="0dp"
                android:visibility="gone">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_name_text"
                    android:textStyle="bold"
                    android:textSize="@dimen/standard_text_size"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/small_margin"/>

            <TextView
                    android:id="@+id/tvDetailPlanet2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="@dimen/standard_text_size"
                    android:layout_marginEnd="@dimen/small_margin"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_population_text"
                    android:textStyle="bold"
                    android:textSize="@dimen/standard_text_size"
                    android:layout_marginEnd="@dimen/small_margin"/>

            <TextView
                    android:id="@+id/tvDetailPopulation2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="@dimen/standard_text_size"/>
        </android.support.v7.widget.LinearLayoutCompat>


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textSize="@dimen/planet_information_text_size"
                android:textColor="@color/black"
                android:text="@string/film_information_text"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rvDetailFilms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                android:visibility="gone">

        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvDetailLoadingPlaceHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/loading_films"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvDetailNothingPlaceHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/etSearchQuery"
                android:text="@string/no_films_were_found"
                android:visibility="gone"/>

    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>